--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -12,3 +12,11 @@
     border-radius: 8px;
     margin: 7px;
 }
+.cart-btn{
+    width: 50%;
+    height: 35px;
+    border: none;
+    border-radius: 8px 8px 8px 8px;
+    font-size: medium;
+    font-weight: bold;
+}
