--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -21,3 +21,9 @@
     margin: 2px;
     border-radius:rounded-circle;
 }
+
+@media screen and (max-width:1100px) {
+    .sports-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
