--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -9,6 +9,8 @@
 }
 
 .cart-container{
+    position: sticky;
+    top: 0;
     background-color: rgb(246, 248, 248);
 }
 .sports-container{
@@ -24,6 +26,6 @@
 
 @media screen and (max-width:1100px) {
     .sports-container {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
